[package]
name = "test"
version = "0.1.0"
authors = ["Markus <markuspetzke@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51.0", features = ["std", "experimental"] }
esp-idf-hal = "0.45.2"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
anyhow = "1.0.98"

embedded-svc = "*"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = "0.33"
